<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>run.mone</groupId>
        <artifactId>jcommon</artifactId>
        <version>1.6.0-jdk21-SNAPSHOT</version>
    </parent>

    <artifactId>mcp</artifactId>
    <version>1.6.1-jdk21-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>mcp-mysql</module>
        <module>mcp-mongo</module>
        <module>mcp-redis</module>
        <module>mcp-shell</module>
        <module>mcp-docker</module>
        <module>mcp-neo4j</module>
        <module>mcp-playwright</module>
        <module>mcp-applescript</module>
        <module>mcp-multimodal</module>
        <module>mcp-memory</module>
        <module>mcp-solution-assessor</module>
        <module>mcp-filesystem</module>
        <module>mcp-prettier</module>
        <module>mcp-writer</module>
        <module>mcp-fetch</module>
        <module>mcp-coder</module>
        <module>mcp-excel</module>
        <module>mcp-song</module>
        <module>mcp-sequentialthinking</module>
        <module>mcp-git</module>
        <module>mcp-hammerspoon</module>
        <module>mcp-idea</module>
        <module>mcp-nacosconfig</module>
        <module>mcp-terminal</module>
        <module>mcp-feishu</module>
        <module>mcp-chrome</module>
        <module>mcp-docparsing</module>
        <module>mcp-email</module>
        <module>mcp-time</module>
        <module>mcp-xmind</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <logback.version>1.5.12</logback.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>5.4.1</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>hive</artifactId>
            <version>1.6.1-jdk21-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>3.4.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-test</artifactId>
            <version>6.2.1</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.15</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-core</artifactId>
            <version>${logback.version}</version>
        </dependency>

        <dependency>
            <groupId>redis.clients</groupId>
            <artifactId>jedis</artifactId>
            <version>4.3.1</version>
        </dependency>


        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>6.2.1</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-context</artifactId>
            <version>6.2.1</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-core</artifactId>
            <version>6.2.1</version>
        </dependency>

        <dependency>
            <groupId>org.springframework</groupId>
            <artifactId>spring-webmvc</artifactId>
            <version>6.2.1</version>
        </dependency>

        <dependency>
            <groupId>run.mone</groupId>
            <artifactId>hive</artifactId>
            <version>1.6.1-jdk21-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <artifactId>logback-classic</artifactId>
                    <groupId>ch.qos.logback</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>logback-core</artifactId>
                    <groupId>ch.qos.logback</groupId>
                </exclusion>
            </exclusions>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.2</version>
        </dependency>

        <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.18.2</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.11.0</version>
        </dependency>

        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
            <version>3.7.0</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>3.4.1</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-websocket</artifactId>
            <version>3.4.1</version>
        </dependency>

    </dependencies>

</project>
